# SensorizedWeightLifting

code/working/firmware/: CMakeLists.txt  ICM20948.h  read.cpp
code/working/firmware/intermediate-processing-rfid/: main.cpp
code/working/software/: Bluetooth.py  E7.py  GUI.py
media/design/: QtPy_to_BT_Con.drawio
